--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
     <script src="app/scripts/controllers/invoices/invoices.controller.js"></script>
     <script src="app/scripts/controllers/jobsites/manage-jobsites.controller.js"></script>
     <script src="app/scripts/controllers/equipments/sell-equipment.controller.js"></script>
+    <script src="app/scripts/controllers/equipments/reserve-equipment.controller.js"></script>
     <!-- endbuild -->
 
     <script type="text/ng-template" id="typeahead-item.html">
