--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/styles/reset.css"> <!-- CSS reset -->
     <link rel="stylesheet" href="app/styles/style.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="app/vendor/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,800' rel='stylesheet' type='text/css'>
     <link href="../bower_components/fontawesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'/>
     <!-- endbuild -->
