Orders history HTML & css Integration

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
 
     <link href="app/styles/main.css" rel="stylesheet">
     <link href="app/styles/media.css" rel="stylesheet">
+    <link href="app/styles/custom.css" rel="stylesheet">
     <!-- endbuild -->
   </head>
   <body class="skin-blue prelogin">
@@ -73,6 +74,7 @@
       <script src="app/scripts/modules/invoices/invoices.module.js"></script>
       <script src="app/scripts/modules/jobsites/manage-jobsite.module.js"></script>
       <script src="app/scripts/modules/equipments/equipments.module.js"></script>
+      <script src="app/scripts/modules/orders/orders.module.js"></script>
     <!-- End Modules -->
 
     <script src="app/scripts/constants/hm-config/env.constants.js"></script>
@@ -88,6 +90,7 @@
     <script src="app/scripts/controllers/equipments/sell-equipment.controller.js"></script>
     <script src="app/scripts/controllers/equipments/reserve-equipment.controller.js"></script>
     <script src="app/scripts/controllers/prelogin/login/login.controller.js"></script>
+    <script src="app/scripts/controllers/orders/orders.history.controller.js"></script>
     <!-- endbuild -->
 
     <script type="text/ng-template" id="typeahead-item.html">
