--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps-street-view.min.js"></script>
     <script src="../bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="../bower_components/ng-file-upload/ng-file-upload-all.min.js"></script>
+    <script src="../bower_components/jquery-zoom/jquery.zoom.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
@@ -75,6 +76,9 @@
       <script src="app/scripts/modules/jobsites/manage-jobsite.module.js"></script>
       <script src="app/scripts/modules/equipments/equipments.module.js"></script>
       <script src="app/scripts/modules/orders/orders.module.js"></script>
+
+      <script src="app/scripts/directives/image.zoom.directive.js"></script>
+
     <!-- End Modules -->
 
     <script src="app/scripts/constants/hm-config/env.constants.js"></script>
@@ -87,10 +91,12 @@
     <script src="app/scripts/controllers/components/navbar/navbar.controller.js"></script>
     <script src="app/scripts/controllers/invoices/invoices.controller.js"></script>
     <script src="app/scripts/controllers/jobsites/manage-jobsites.controller.js"></script>
-    <script src="app/scripts/controllers/equipments/sell-equipment.controller.js"></script>
-    <script src="app/scripts/controllers/equipments/reserve-equipment.controller.js"></script>
+    <script src="app/scripts/controllers/equipments/equipment.sell.controller.js"></script>
+    <script src="app/scripts/controllers/equipments/equipments.details.controller.js"></script>
+    <script src="app/scripts/controllers/equipments/equipment.reserve.controller.js"></script>
     <script src="app/scripts/controllers/prelogin/login/login.controller.js"></script>
     <script src="app/scripts/controllers/orders/orders.history.controller.js"></script>
+    <script src="app/scripts/controllers/equipments/equipment.reserve-success.controller.js"></script>
     <!-- endbuild -->
 
     <script type="text/ng-template" id="typeahead-item.html">
