List View and Grid View Changes

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <link href="app/styles/media.css" rel="stylesheet">
     <link href="app/styles/custom.css" rel="stylesheet">
     <!-- endbuild -->
+    <script src='http://maps.googleapis.com/maps/api/js?sensor=false'></script>
   </head>
   <body class="skin-blue prelogin">
     <!--[if lt IE 10]>
@@ -59,6 +60,7 @@
     <script src="../bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="../bower_components/ng-file-upload/ng-file-upload-all.min.js"></script>
     <script src="../bower_components/jquery-zoom/jquery.zoom.js"></script>
+    <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
@@ -73,9 +75,10 @@
       <script src="app/scripts/modules/prelogin/prelogin.module.js"></script>
       <script src="app/scripts/modules/dashboard/dashboard.module.js"></script>
       <script src="app/scripts/modules/invoices/invoices.module.js"></script>
-      <script src="app/scripts/modules/jobsites/manage-jobsite.module.js"></script>
+      <script src="app/scripts/modules/jobsites/jobsite.manage.module.js"></script>
       <script src="app/scripts/modules/equipments/equipments.module.js"></script>
       <script src="app/scripts/modules/orders/orders.module.js"></script>
+      <script src="app/scripts/modules/search/search.module.js"></script>
 
       <script src="app/scripts/directives/image.zoom.directive.js"></script>
 
@@ -97,6 +100,7 @@
     <script src="app/scripts/controllers/prelogin/login/login.controller.js"></script>
     <script src="app/scripts/controllers/orders/orders.history.controller.js"></script>
     <script src="app/scripts/controllers/equipments/equipment.reserve-success.controller.js"></script>
+    <script src="app/scripts/controllers/search/search.controller.js"></script>
     <!-- endbuild -->
 
     <script type="text/ng-template" id="typeahead-item.html">
