--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,8 @@
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="../bower_components/angular-dynamic-locale/tmhDynamicLocale.min.js"></script>
+    <script src="../bower_components/angular-translate/angular-translate.min.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="../bower_components/lodash/dist/lodash.min.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
@@ -61,6 +63,9 @@
     <script src="../bower_components/ng-file-upload/ng-file-upload-all.min.js"></script>
     <script src="../bower_components/jquery-zoom/jquery.zoom.js"></script>
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+    <script src="../bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
+    <script src="../bower_components/valdr/valdr.min.js"></script>
+    <script src="../bower_components/valdr/valdr-message.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
@@ -87,6 +92,7 @@
     <script src="app/scripts/constants/hm-config/env.constants.js"></script>
     <script src="app/scripts/constants/hm-config/routes.constants.js"></script>
     <script src="app/scripts/constants/hm-config/global.constant.js"></script>
+    <script src="app/scripts/constants/validation/validation.constraints.constant.js"></script>
 
     <script src="app/scripts/controllers/prelogin/dashboard/search.controller.js"></script>
     <script src="app/scripts/controllers/prelogin/components/navbar/navbar.controller.js"></script>
