--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
     <!-- build:js(src) scripts/vendor.js -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/angular/angular.min.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/raven-js/dist/raven.min.js"></script>
     <script>
       Raven.config('YOUR_PUBLIC_DSN', {
