--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
     <script src="../bower_components/angular-dynamic-locale/tmhDynamicLocale.min.js"></script>
     <script src="../bower_components/angular-translate/angular-translate.min.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="../bower_components/lodash/dist/lodash.min.js"></script>
+    <script src="../bower_components/lodash/lodash.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps-street-view.min.js"></script>
