--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,8 @@
     <script src="app/login/login.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
+    <script src="app/search/search.constant.js"></script>
+    <script src="app/equipment-detail/equipment-details.constant.js"></script>
 
 
     <script src="app/validation/validation.constraints.constant.js"></script>
