--- a/src/index.html
+++ b/src/index.html
@@ -118,13 +118,15 @@
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
+    <script src="app/header/header.constant.js"></script>
+    <script src="app/prelogin-header/prelogin-header.constant.js"></script>
     <script src="app/equipment-detail/equipment-details.constant.js"></script>
 
 
     <script src="app/validation/validation.constraints.constant.js"></script>
     <script src="app/core/rest.service.js"></script>
     <script src="app/core/hm.core.client-store.service.js"></script>
-    <script src="app/prelogin-header/header.controller.js"></script>
+    <script src="app/prelogin-header/prelogin-header.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
     <script src="app/header/header.controller.js"></script>
     <script src="app/invoices/invoices.controller.js"></script>
