--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
     <script src="../bower_components/valdr/valdr-message.min.js"></script>
     <script src="../bower_components/pouchdb/dist/pouchdb.js"></script>
     <script src="../bower_components/angular-pouchdb/angular-pouchdb.min.js"></script>
+    <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
 
     <!-- endbuild -->
 
@@ -119,6 +120,7 @@
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
     <script src="app/header/header.constant.js"></script>
+    <script src="app/request-callback/request-callback.constant.js"></script>
     <script src="app/prelogin-header/prelogin-header.constant.js"></script>
     <script src="app/equipment-detail/equipment-details.constant.js"></script>
 
