--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
     <script src="../bower_components/pouchdb/dist/pouchdb.js"></script>
     <script src="../bower_components/angular-pouchdb/angular-pouchdb.min.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
 
     <!-- endbuild -->
 
