User activation flow

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
       <script src="app/global/global.module.js"></script>
       <script src="app/env/env.module.js"></script>
       <script src="app/landing/landing.module.js"></script>
+      <script src="app/activate-user/activate-user.module.js"></script>
       <script src="app/login/login.module.js"></script>
       <script src="app/logout/logout.module.js"></script>
       <script src="app/dashboard/dashboard.module.js"></script>
@@ -116,6 +117,7 @@
     <script src="app/env/env.constants.js"></script>
     <script src="app/routes/routes.constants.js"></script>
     <script src="app/global/global.constant.js"></script>
+    <script src="app/activate-user/activate-user.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
@@ -131,6 +133,7 @@
     <script src="app/core/hm.core.client-store.service.js"></script>
     <script src="app/prelogin-header/prelogin-header.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
+    <script src="app/activate-user/activate-user.controller.js"></script>
     <script src="app/header/header.controller.js"></script>
     <script src="app/invoices/invoices.controller.js"></script>
     <script src="app/manage-jobsites/manage-jobsites.controller.js"></script>
