eqipment reserve page changes

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,7 @@
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
+    <script src="app/equipment-reserve/equipment-reserve.constant.js"></script>
     <script src="app/header/header.constant.js"></script>
     <script src="app/request-callback/request-callback.constant.js"></script>
     <script src="app/prelogin-header/prelogin-header.constant.js"></script>
