date picker changes

--- a/src/index.html
+++ b/src/index.html
@@ -78,10 +78,10 @@
     <script src="../bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
     <script src="../bower_components/valdr/valdr.min.js"></script>
     <script src="../bower_components/valdr/valdr-message.min.js"></script>
-    <script src="../bower_components/pouchdb/dist/pouchdb.js"></script>
-    <script src="../bower_components/angular-pouchdb/angular-pouchdb.min.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
-    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
+    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="../bower_components/angular-datepicker/dist/angular-datepicker.min.js"></script>
+    <!-- <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script> -->
 
     <!-- endbuild -->
 
