forgot password changes

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
       <script src="app/order-history/order-history.module.js"></script>
       <script src="app/request-callback/request-callback.module.js"></script>
       <script src="app/search/search.module.js"></script>
+      <script src="app/forgot-password/forgot-password.module.js"></script>
 
       <script src="app/image-zoom/image.zoom.directive.js"></script>
 
@@ -146,6 +147,7 @@
     <script src="app/order-history/order-history.controller.js"></script>
     <script src="app/equipment-reserve-success/equipment-reserve-success.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
+    <script src="app/forgot-password/forgot-password.controller.js"></script>
 
     <!-- endbuild -->
 
