Forgot password changes

--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,7 @@
     <script src="app/activate-user/activate-user.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
+    <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
     <script src="app/equipment-reserve/equipment-reserve.constant.js"></script>
