--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
       <script src="app/login/login.module.js"></script>
       <script src="app/logout/logout.module.js"></script>
       <script src="app/dashboard/dashboard.module.js"></script>
+      <script src="app/terms-and-conditions/terms-and-conditions.module.js"></script>
       <script src="app/invoices/invoices.module.js"></script>
       <script src="app/equipment-detail/equipment-detail.module.js"></script>
       <script src="app/manage-jobsites/manage-jobsites.module.js"></script>
@@ -134,6 +135,7 @@
     <script src="app/core/hm.core.client-store.service.js"></script>
     <script src="app/prelogin-header/prelogin-header.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
+    <script src="app/terms-and-conditions/terms-and-conditions.controller.js"></script>
     <script src="app/activate-user/activate-user.controller.js"></script>
     <script src="app/header/header.controller.js"></script>
     <script src="app/invoices/invoices.controller.js"></script>
