--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,800' rel='stylesheet' type='text/css'>
     <link href="../bower_components/fontawesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'/>
+
     <!-- endbuild -->
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
@@ -27,6 +28,7 @@
     <link href="app/styles/custom.css" rel="stylesheet">
     <!-- endbuild -->
     <script src='http://maps.googleapis.com/maps/api/js?sensor=false'></script>
+
   </head>
   <body class="skin-blue prelogin">
     <!--[if lt IE 10]>
@@ -51,6 +53,7 @@
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/raven-js/dist/raven.min.js"></script>
+    <script src="app/menu-aim/jquery.menu-aim.js"></script>
     <script>
       Raven.config('YOUR_PUBLIC_DSN', {
         // Raven settings
@@ -94,6 +97,7 @@
       <script src="app/global/global.module.js"></script>
       <script src="app/env/env.module.js"></script>
       <script src="app/landing/landing.module.js"></script>
+      <script src="app/menu-aim/menu-aim.module.js"></script>
       <script src="app/activate-user/activate-user.module.js"></script>
       <script src="app/login/login.module.js"></script>
       <script src="app/logout/logout.module.js"></script>
@@ -151,6 +155,8 @@
     <script src="app/equipment-reserve-success/equipment-reserve-success.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/forgot-password/forgot-password.controller.js"></script>
+
+    <script src="app/menu-aim/menu-aim.directive.js"></script>
 
     <!-- endbuild -->
 
