Menu aim changes

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,7 @@
     <script src="../bower_components/valdr/valdr-message.min.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 
     <!-- endbuild -->
 
