Infinite scroll changes

--- a/src/index.html
+++ b/src/index.html
@@ -55,14 +55,14 @@
     <script src="../bower_components/raven-js/dist/raven.min.js"></script>
     <script src="app/menu-aim/jquery.menu-aim.js"></script>
     <script>
-      Raven.config('YOUR_PUBLIC_DSN', {
-        // Raven settings
-      })
-        .setUser({
-          "id": "SERVER_RENDERED_ID",
-          "email": "SERVER_RENDERED_EMAIL"
-        })
-        .install()
+      // Raven.config('YOUR_PUBLIC_DSN', {
+      //   // Raven settings
+      // })
+      //   .setUser({
+      //     "id": "SERVER_RENDERED_ID",
+      //     "email": "SERVER_RENDERED_EMAIL"
+      //   })
+      //   .install()
     </script>
     <script src="../bower_components/angular-raven/angular-raven.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
