login user name issue

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
       <script src="app/activate-user/activate-user.module.js"></script>
       <script src="app/login/login.module.js"></script>
       <script src="app/logout/logout.module.js"></script>
+      <script src="app/manage-my-account/manage-my-account.module.js"></script>
       <script src="app/dashboard/dashboard.module.js"></script>
       <script src="app/terms-and-conditions/terms-and-conditions.module.js"></script>
       <script src="app/invoices/invoices.module.js"></script>
@@ -127,6 +128,7 @@
     <script src="app/logout/logout.constant.js"></script>
     <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
+    <script src="app/manage-my-account/manage-my-account.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
     <script src="app/equipment-reserve/equipment-reserve.constant.js"></script>
     <script src="app/header/header.constant.js"></script>
@@ -144,6 +146,7 @@
     <script src="app/activate-user/activate-user.controller.js"></script>
     <script src="app/header/header.controller.js"></script>
     <script src="app/invoices/invoices.controller.js"></script>
+    <script src="app/manage-my-account/manage-my-account.controller.js"></script>
     <script src="app/manage-jobsites/manage-jobsites.controller.js"></script>
     <script src="app/equipment-sell/equipment-sell.controller.js"></script>
     <script src="app/equipment-detail/equipment-detail.controller.js"></script>
