my catalogue state

--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,7 @@
       <script src="app/login/login.module.js"></script>
       <script src="app/logout/logout.module.js"></script>
       <script src="app/manage-my-account/manage-my-account.module.js"></script>
+      <script src="app/my-catalogue/my-catalogue.module.js"></script>
       <script src="app/dashboard/dashboard.module.js"></script>
       <script src="app/terms-and-conditions/terms-and-conditions.module.js"></script>
       <script src="app/invoices/invoices.module.js"></script>
@@ -129,6 +130,7 @@
     <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/manage-my-account/manage-my-account.constant.js"></script>
+    <script src="app/my-catalogue/my-catalogue.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
     <script src="app/equipment-reserve/equipment-reserve.constant.js"></script>
     <script src="app/header/header.constant.js"></script>
@@ -146,6 +148,7 @@
     <script src="app/activate-user/activate-user.controller.js"></script>
     <script src="app/header/header.controller.js"></script>
     <script src="app/invoices/invoices.controller.js"></script>
+    <script src="app/my-catalogue/my-catalogue.controller.js"></script>
     <script src="app/manage-my-account/manage-my-account.controller.js"></script>
     <script src="app/manage-jobsites/manage-jobsites.controller.js"></script>
     <script src="app/equipment-sell/equipment-sell.controller.js"></script>
