--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,7 @@
       <script src="app/invoices/invoices.module.js"></script>
       <script src="app/equipment-detail/equipment-detail.module.js"></script>
       <script src="app/manage-jobsites/manage-jobsites.module.js"></script>
+      <script src="app/quota-n-reservations/quota-n-reservations.module.js"></script>
       <script src="app/equipment-reserve/equipment-reserve.module.js"></script>
       <script src="app/equipment-reserve-success/equipment-reserve-success.module.js"></script>
       <script src="app/equipment-sell/equipment-sell.module.js"></script>
@@ -127,6 +128,7 @@
     <script src="app/activate-user/activate-user.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
+    <script src="app/quota-n-reservations/quota-n-reservations.constant.js"></script>
     <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/manage-my-account/manage-my-account.constant.js"></script>
@@ -144,6 +146,7 @@
     <script src="app/core/hm.core.client-store.service.js"></script>
     <script src="app/prelogin-header/prelogin-header.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
+    <script src="app/quota-n-reservations/quota-n-reservations.controller.js"></script>
     <script src="app/terms-and-conditions/terms-and-conditions.controller.js"></script>
     <script src="app/activate-user/activate-user.controller.js"></script>
     <script src="app/header/header.controller.js"></script>
