--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
       //   })
       //   .install()
     </script>
+    <script src="../bower_components/bootstrap/js/dropdown.js"></script>
     <script src="../bower_components/angular-raven/angular-raven.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -82,7 +83,6 @@
     <script src="../bower_components/valdr/valdr.min.js"></script>
     <script src="../bower_components/valdr/valdr-message.min.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
-    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 
     <!-- endbuild -->
