add job site page

--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,7 @@
       <script src="app/request-callback/request-callback.module.js"></script>
       <script src="app/search/search.module.js"></script>
       <script src="app/forgot-password/forgot-password.module.js"></script>
+      <script src="app/add-job-site/add-job-site-module.js"></script>
 
       <script src="app/image-zoom/image.zoom.directive.js"></script>
 
@@ -165,6 +166,7 @@
     <script src="app/equipment-reserve-success/equipment-reserve-success.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/forgot-password/forgot-password.controller.js"></script>
+    <script src="app/add-job-site/add-job-site-controller.js"></script>
 
     <script src="app/menu-aim/menu-aim.directive.js"></script>
 
