Invoice page changes

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,7 @@
     <script src="app/login/login.constant.js"></script>
     <script src="app/portal-access/portal-access.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
+    <script src="app/invoices/invoices.constant.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.constant.js"></script>
     <script src="app/forgot-password/forgot-password.constant.js"></script>
     <script src="app/landing/landing.constant.js"></script>
