Portal Access changes

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <link href="app/styles/media.css" rel="stylesheet">
     <link href="app/styles/custom.css" rel="stylesheet">
     <!-- endbuild -->
-    <script src='http://maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src='http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false'></script>
 
   </head>
   <body class="skin-blue prelogin">
@@ -173,6 +173,7 @@
     <script src="app/add-job-site/add-job-site-controller.js"></script>
 
     <script src="app/menu-aim/menu-aim.directive.js"></script>
+    <script src="app/autocomplete/ngAutocomplete.js"></script>
 
     <!-- endbuild -->
 
