--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,8 @@
     <script src="../bower_components/jquery-zoom/jquery.zoom.js"></script>
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="../bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
-    <script src="../bower_components/valdr/valdr.min.js"></script>
-    <script src="../bower_components/valdr/valdr-message.min.js"></script>
+    <script src="../bower_components/valdr/valdr.js"></script>
+    <script src="../bower_components/valdr/valdr-message.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
     <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 
