--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <![endif]-->
 
     <div ui-view="navbar"></div>
-    <div ui-view></div>
+    <div ui-view autoscroll=""></div>
     <div ui-view="footer"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -104,6 +104,7 @@
       <script src="app/logout/logout.module.js"></script>
       <script src="app/manage-my-account/manage-my-account.module.js"></script>
       <script src="app/my-catalogue/my-catalogue.module.js"></script>
+      <script src="app/user-profile/user-profile.module.js"></script>
       <script src="app/dashboard/dashboard.module.js"></script>
       <script src="app/terms-and-conditions/terms-and-conditions.module.js"></script>
       <script src="app/invoices/invoices.module.js"></script>
@@ -128,6 +129,7 @@
     <script src="app/routes/routes.constants.js"></script>
     <script src="app/global/global.constant.js"></script>
     <script src="app/activate-user/activate-user.constant.js"></script>
+    <script src="app/user-profile/user-profile.constant.js"></script>
     <script src="app/login/login.constant.js"></script>
     <script src="app/portal-access/portal-access.constant.js"></script>
     <script src="app/logout/logout.constant.js"></script>
@@ -149,6 +151,7 @@
     <script src="app/core/rest.service.js"></script>
     <script src="app/core/hm.core.client-store.service.js"></script>
     <script src="app/prelogin-header/prelogin-header.controller.js"></script>
+    <script src="app/user-profile/user-profile.controller.js"></script>
     <script src="app/dashboard/dashboard.controller.js"></script>
     <script src="app/portal-access/portal-access.controller.js"></script>
     <script src="app/quota-n-reservations/quota-n-reservations.controller.js"></script>
