--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
 
     <!-- build:js(src) scripts/vendor.js -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/raven-js/dist/raven.min.js"></script>
     <script src="app/menu-aim/jquery.menu-aim.js"></script>
