Search page changes

--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,7 @@
       <script src="app/my-catalogue/my-catalogue.module.js"></script>
       <script src="app/user-profile/user-profile.module.js"></script>
       <script src="app/dashboard/dashboard.module.js"></script>
+      <script src="app/load-indicator/load-indicator.module.js"></script>
       <script src="app/terms-and-conditions/terms-and-conditions.module.js"></script>
       <script src="app/invoices/invoices.module.js"></script>
       <script src="app/equipment-detail/equipment-detail.module.js"></script>
@@ -176,6 +177,7 @@
     <script src="app/add-job-site/add-job-site-controller.js"></script>
 
     <script src="app/menu-aim/menu-aim.directive.js"></script>
+    <script src="app/load-indicator/load-indicator.directive.js"></script>
     <script src="app/autocomplete/ngAutocomplete.js"></script>
 
     <!-- endbuild -->
