--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,7 @@
     <script src="../bower_components/valdr/valdr-message.js"></script>
     <script src="../bower_components/angular-ui-mask/dist/mask.min.js"></script>
     <script src="../bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
+    <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
 
     <!-- endbuild -->
 
