Search related changes

--- a/src/index.html
+++ b/src/index.html
@@ -175,9 +175,12 @@
     <script src="app/order-history/order-history.controller.js"></script>
     <script src="app/equipment-reserve-success/equipment-reserve-success.controller.js"></script>
     <script src="app/search/search.controller.js"></script>
+    <script src="app/search/search-result.controller.js"></script>
     <script src="app/forgot-password/forgot-password.controller.js"></script>
     <script src="app/add-job-site/add-job-site-controller.js"></script>
 
+    <script src="app/search/search-result-list-view.directive.js"></script>
+    <script src="app/search/search-result-grid-view.directive.js"></script>
     <script src="app/menu-aim/menu-aim.directive.js"></script>
     <script src="app/load-indicator/load-indicator.directive.js"></script>
     <script src="app/autocomplete/ngAutocomplete.js"></script>
